--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,16 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.18",
+    "@fullcalendar/daygrid": "^6.1.18",
+    "@fullcalendar/google-calendar": "^6.1.18",
+    "@fullcalendar/react": "^6.1.18",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "chart.js": "^4.5.0",
+    "datatables.net-bs5": "^2.3.2",
+    "datatables.net-buttons-dt": "^3.2.4",
+    "datatables.net-dt": "^2.3.2",
+    "datatables.net-react": "^1.0.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.3",
+    "react-tailwindcss-datepicker": "^2.0.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/node": "^24.0.13",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
