--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/react": "^6.1.18",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "datatables.net-bs5": "^2.3.2",
     "datatables.net-buttons-dt": "^3.2.4",
@@ -27,6 +28,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.6.3",
     "react-tailwindcss-datepicker": "^2.0.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
