for railway deploy

--- a/Frontend/.env.example
+++ b/Frontend/.env.example
@@ -1,1 +1,11 @@
-VITE_API_BASE_URL=
+# Railway Environment Variables for Frontend
+# Set these in your Railway project dashboard
+
+# API Base URL (point to your backend Railway service)
+VITE_API_BASE_URL=https://your-backend-service.railway.app
+
+# Port (Railway will set this automatically)
+PORT=5173
+
+# Node environment
+NODE_ENV=production
