--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview --host 0.0.0.0 --port $PORT",
+    "serve": "serve -s dist -l $PORT"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.18",
@@ -29,6 +31,7 @@
     "react-router": "^7.6.3",
     "react-tailwindcss-datepicker": "^2.0.0",
     "react-toastify": "^11.0.5",
+    "serve": "^14.2.3",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
